--- a/style.css
+++ b/style.css
@@ -28,4 +28,33 @@ ul {
 
 .pagination {
 	margin: 20px;
+	text-align: center;
+}
+.pagination a {
+	border: 1px solid #ddd;
+	padding: 6px 12px;
+	text-decoration: none;
+	background: #fff;
+	color: #428eca;
+}
+.pagination a:nth-child(even) {
+	border-left: none;
+	border-right: none;
+}
+.pagination a:first-child {
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+}
+.pagination a:last-child {
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border-right: 1px solid #ddd;
+}
+.pagination a:hover {
+	background:#eee;
+}
+.pagination .nav-active {
+	background: #428eca;
+	color: #fff;
+	border-color: #428eca;
 }
