end of lesson 13

--- a/views/style.css
+++ b/views/style.css
@@ -58,3 +58,16 @@ ul {
 	color: #fff;
 	border-color: ;
 }
+
+.menu {
+	margin: 0 0 20px;
+}
+
+.menu li {
+	display: inline;
+	margin: 0 20px 0 0;
+}
+
+.menu li a:hover {
+	text-decoration: none;
+}
