end of lesson 16

--- a/views/style.css
+++ b/views/style.css
@@ -16,6 +16,7 @@
 .content {
 	float: left;
 	width: 680px;
+	margin: 0 0 50px;
 }
 
 ul {
@@ -91,4 +92,70 @@ ul {
 
 .comments .manager span {
 	color: red;
+}
+
+/* Form */
+.form p {
+	margin-bottom: 20px;
+}
+.form label {
+	width: 180px;
+	float: left;
+	color: #999;
+	padding-top: 5px;
+}
+.form input {
+	width: 400px;
+}
+.form textarea {
+	width: 400px;
+	max-width: 400px;
+	min-width: 400px;
+	line-height: 150%;
+}
+.form input[type="checkbox"] {
+	width: auto;
+}
+
+.form input, .form textarea, .form select {
+	padding: 9px;
+	border: 1px solid #E5E5E5;
+	border-radius: 5px;
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+	background: #FFF url('img/bg.jpg') left top repeat-x;
+}
+
+.form input:hover, .form textarea:hover, .form select:hover,
+.form input:focus, .form textarea:focus, .form select:focus {
+	border-color: #C9C9C9;
+	box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+}
+
+button.open-form,
+.form .submit input {
+	width: auto;
+	background: #617798;
+	color: #FFF;
+	padding: 9px 15px;
+	border: 0;
+	font-size: 14px;
+	cursor: pointer;
+	border-radius: 5px;
+}
+button.open-form:hover,
+.form .submit input:hover {
+	background: #2B415E;
+}
+
+.reply {
+	cursor: pointer;
+	color: #2B415E;
+	text-decoration: underline;
+}
+.reply:hover {
+	text-decoration: none;
 }
