--- a/views/style.css
+++ b/views/style.css
@@ -159,3 +159,34 @@ button.open-form:hover,
 .reply:hover {
 	text-decoration: none;
 }
+
+#loader {
+	position: fixed;
+	display: none;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #f2f2f2;
+	opacity: .9;
+}
+
+#loader span {
+	display: block;
+	background: url(img/loader.gif);
+	width: 128px;
+	height: 15px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	margin: -7px 0 0 -56px;
+}
+
+.new-comment {
+	display: none;
+	background-color: #dcdcdc;
+}
+
+#error-comment {
+	color: red;
+}
